# hakyll-ikiwiki

./: IkiWiki.hs  README.md  hakyll-ikiwiki.cabal  site.hs
posts/: tags.mdwn  templates.mdwn
templates/: bar.html  default.html  foo.html  post.html
