name:               hakyll-ikiwiki
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , parsec
                  , pandoc
                  , unordered-containers == 0.2.9.*
  ghc-options:      -threaded
  default-language: Haskell2010
  other-modules:    IkiWiki
